--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
         <div class="navbar">
         <p id="home"><a href="homepage.html">Home</a></p>
         <p><a href="about us.html">About Us</a></p>
-        <p><a href="contact us.html">Contact Us</a></p>
+        <p><a href="contact.html">Contact Us</a></p>
         </div>
     </header>  
     <h1>OUR BRANCHES</h1>
