--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Contact Us</title>
-    <link rel="stylesheet" type="text/css" href="Contact Us.css">
+    <link rel="stylesheet" type="text/css" href="Contact.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
