--- a/about us.html
+++ b/about us.html
@@ -20,20 +20,13 @@
             <h1>About Us</h1>
         </div>
         <div class="text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae velit in nisi vestibulum convallis. Sed eget neque hendrerit, fringilla nunc et, tincidunt turpis. Duis condimentum faucibus sem non convallis. Nullam lacinia ultricies nunc, et scelerisque ex aliquet et.</p>
-            <p>Phasellus ultrices purus id urna congue scelerisque. Integer mattis nulla et neque ullamcorper posuere. Morbi varius malesuada tellus, eget sodales mauris ullamcorper vel.</p>
+            <p>Study Sphere is a student-driven platform created to make learning easier for engineering students. It brings together notes, previous year question papers, and other study resources in one place, so students can save time and focus on understanding concepts. The platform also allows students to share their own notes and resources, helping to build a collaborative and supportive learning community.</p>
+            <p>Hey folks! I’ve always dreamed of creating something big, and this website is just the beginning of that journey. It’s the first step toward leaving a mark and building something meaningful. Thank you for being part of this learning community — here’s to growing, achieving, and making the journey exciting together. Happy learning!</p>
         </div>
         <div class="profile">
             <img src="KRISHI.png" class="image" alt="image">
         </div>
-        <div class="text2">
-            <p>"Hey folks, I've always harbored a burning desire to create something massive, something that shouts, 'I am here to rule!', this website is just the tip of the iceberg in my quest to leave a mark on the world. As they say, 'Picture abhi baaki hai mere dost,' and this is just the opening act. I believe in dreaming big, and this is just the start of my journey towards building a legacy of my own. So, get ready for take-off because there's a whole lot more coming your way!
-                A special shoutout to my partner in crime, Krishi Jain, for bringing this brilliant idea to the table, being my rock throughout the entire process, and preventing those 'Yeh karte hai na, maza ayega' moments. Like Sanjay Dutt, always responding with a firm 'Nahi,' but that saved us both from getting into trouble.
-                And in the end, I just want to take a moment to express my gratitude to each and every one of you who has visited my website. Thank you for being a part of this learning community, and here's to more growth, understanding, and achievements in your academic pursuits. Happy learning!"</p>
-        </div>
-        <div class="profile2">
-            <img src="SUYASH.png" class="image" alt="image">
-        </div>
+        
 </body>
 </html>
 
